--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<title>FriendFinder</title>
+	<title>Friend Finder</title>
 
 	<!-- Latest compiled and minified CSS & JS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 	<!-- Font Awesome Glyphicons -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -17,6 +18,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
 </head>
+
 <body>
 
 	<div class="container">
@@ -26,231 +28,237 @@
 
 		<h3><strong>About You</strong></h3>
 		<h4>Name (Required)</h4>
-		<input type="text" name="" id="name" class="form-control" required >
+		<input type="text" name="" id="name" class="form-control" required>
 
 		<h4>Link to Photo Image (Required)</h4>
-		<input type="text" name="" id="photo" class="form-control" required >
+		<input type="text" name="" id="photo" class="form-control" required>
 
 		<hr>
 
 		<h3><strong>Question 1</strong></h3>
 		<h4>You like to get up early and hate sleeping in.</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q1">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q1">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 		<h3><strong>Question 2</strong></h3>
 		<h4>You prefer to go with the flow</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q2">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q2">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 
 		<h3><strong>Question 3</strong></h3>
 		<h4>You would describe yourself as relaxed</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q3">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q3">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 
 		<h3><strong>Question 4</strong></h3>
 		<h4>You love structure and organization.</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q4">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q4">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 
 		<h3><strong>Question 5</strong></h3>
 		<h4>People would describe you as a hot head.</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q5">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q5">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 
 		<h3><strong>Question 6</strong></h3>
 		<h4>You like swords more than you like swords.</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q6">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q6">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 
 		<h3><strong>Question 7</strong></h3>
 		<h4>You tend to speak your mind unaplogectically.</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q7">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q7">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 		<h3><strong>Question 8</strong></h3>
 		<h4>You like to day dream often.</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q8">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q8">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 		<h3><strong>Question 9</strong></h3>
 		<h4>You do not get along with people whom you disagree with.</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q9">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q9">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 		<h3><strong>Question 10</strong></h3>
 		<h4>You enjoy physical activies more than relaxing</h4>
-	 	<select data-placeholder="" class="chosen-select" id="q10">
-	 		<option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-      	</select>
+		<select data-placeholder="" class="chosen-select" id="q10">
+			<option value=""></option>
+			<option value="1">1 (Strongly Disagree)</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5 (Strongly Agree)</option>
+		</select>
 
 		<br>
 		<br>
 
 		<!-- Submit Button -->
 		<button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
- Submit</button>
+			Submit</button>
 
 		<hr>
-	    <footer class="footer">
-	      <div class="container">
-		        <p><a href="/app/data/friends.js">Friends List</a> | <a href="https://github.com/teckniec/FriendFinder">GitHub Repo</a></p>
-	      </div>
-	    </footer>
+		<footer class="footer">
+			<div class="container">
+				<p><a href="/app/data/friends.js">Friends List</a> | <a href="https://github.com/teckniec/FriendFinder">GitHub Repo</a></p>
+			</div>
+		</footer>
 
 	</div>
 
 	<!-- Modal -->
 	<div id="resultsModal" class="modal fade" role="dialog">
-	  <div class="modal-dialog">
+		<div class="modal-dialog">
 
-	    <!-- Modal content-->
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal">&times;</button>
-	        <h2 class="modal-title"><strong>Best Match</strong></h2>
-	      </div>
-	      <div class="modal-body">
-	        <h2 id="matchName"></h2>
-	        <img id="matchImg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	      </div>
-	    </div>
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h2 class="modal-title"><strong>Best Match</strong></h2>
+				</div>
+				<div class="modal-body">
+					<h2 id="matchName"></h2>
+					<img id="matchImg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
 
-	  </div>
+		</div>
 	</div>
 
-  <script type="text/javascript">
-  	// Chosen CSS
-    var config = {
-      '.chosen-select'           : {},
-      '.chosen-select-deselect'  : {allow_single_deselect:true},
-      '.chosen-select-no-single' : {disable_search_threshold:10},
-      '.chosen-select-no-results': {no_results_text:'Oops, nothing found!'},
-      '.chosen-select-width'     : {width:"95%"}
-    }
-    for (var selector in config) {
-      $(selector).chosen(config[selector]);
-    }
-    // Capture the form inputs 
-    $("#submit").on("click", function(){
-    	// Form validation
-    	function validateForm() {
-		  var isValid = true;
-		  $('.form-control').each(function() {
-		    if ( $(this).val() === '' )
-		        isValid = false;
-		  });
-		  $('.chosen-select').each(function() {
-		  	if( $(this).val() === "")
-		  		isValid = false
-		  })
-		  return isValid;
+	<script type="text/javascript">
+		// Chosen Friends CSS
+		var config = {
+			'.chosen-select': {},
+			'.chosen-select-deselect': {
+				allow_single_deselect: true
+			},
+			'.chosen-select-no-single': {
+				disable_search_threshold: 10
+			},
+			'.chosen-select-no-results': {
+				no_results_text: 'Oops, nothing found!'
+			},
+			'.chosen-select-width': {
+				width: "95%"
+			}
 		}
-		// If all required fields are filled
-		if (validateForm() == true)
-		{
-			// Create an object for the user's data
-	    	var userData = {
-	    		name: $("#name").val(),
-	    		photo: $("#photo").val(),
-	    		scores: [
-	    			$("#q1").val(),
-	    			$("#q2").val(),
-	    			$("#q3").val(),
-	    			$("#q4").val(),
-	    			$("#q5").val(),
-	    			$("#q6").val(),
-	    			$("#q7").val(),
-	    			$("#q8").val(),
-	    			$("#q9").val(),
-	    			$("#q10").val(), ]
-	    	}
-	    	// Grab the URL of the website
-	    	var currentURL = window.location.origin;
-	    	// AJAX post the data to the friends route. 
-	    	$.post(currentURL + "/api/friends", userData, function(data){
-	    		// Grab the result from the AJAX post so that the best match's name and photo are displayed.
-	    		$("#matchName").text(data.name);
-	    		$("#matchImg").attr("src", data.photo);
-		    	// Show the modal with the best match 
-		    	$("#resultsModal").modal('toggle');
-	    	});
+		for (var selector in config) {
+			$(selector).chosen(config[selector]);
 		}
-		else
-		{
-			alert("Please fill out all fields before submitting!");
-		}
-    	
-    	return false;
-    });
-  </script>
+		// Capture the form inputs 
+		$("#submit").on("click", function () {
+			// Form validator
+			function validateForm() {
+				var isValid = true;
+				$('.form-control').each(function () {
+					if ($(this).val() === '')
+						isValid = false;
+				});
+				$('.chosen-select').each(function () {
+					if ($(this).val() === "")
+						isValid = false
+				})
+				return isValid;
+			}
+			if (validateForm() == true) {
+				// Object for user data
+				var userData = {
+					name: $("#name").val(),
+					photo: $("#photo").val(),
+					scores: [
+						$("#q1").val(),
+						$("#q2").val(),
+						$("#q3").val(),
+						$("#q4").val(),
+						$("#q5").val(),
+						$("#q6").val(),
+						$("#q7").val(),
+						$("#q8").val(),
+						$("#q9").val(),
+						$("#q10").val(),
+					]
+				}
+				// Grab the URL
+				var currentURL = window.location.origin;
+				// AJAX post the data to the friends route. 
+				$.post(currentURL + "/api/friends", userData, function (data) {
+					// Grab the result from the AJAX post so that the best match's name and photo are displayed.
+					$("#matchName").text(data.name);
+					$("#matchImg").attr("src", data.photo);
+					// Show the modal with the best match 
+					$("#resultsModal").modal('toggle');
+				});
+			} else {
+				alert("All fields are required!");
+			}
+
+			return false;
+		});
+	</script>
 
 </body>
+
 </html>
