--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,7 +25,7 @@
 			<br>
 
 			<div class="">
-				<a href="/app/public/survey.html"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>	
+				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>	
 			</div>
 
 		</div>
